--- a/css/style.css
+++ b/css/style.css
@@ -163,7 +163,7 @@ a {
   margin-right: 8px;
 }
 
-.radio:checked~.p-feedback-radio-group-text::before {
+.radio:checked ~ .p-feedback-radio-group-text::before {
   background-image: url("../svg/form-circle.svg");
 }
 
@@ -173,7 +173,6 @@ a {
 
 .p-feedback-form-opinion {
   padding-top: 28px;
-
 }
 
 .p-feedback-group-opinion {
@@ -199,7 +198,7 @@ a {
   color: #ffffff;
   letter-spacing: 1px;
   /*font-size: 0.813em;*/
-  font-family: open-sans-r
+  font-family: open-sans-r;
 }
 
 /* крестик*/
@@ -289,7 +288,7 @@ a {
 
 .nav-list:hover {
   text-decoration: underline;
-  color: #dacfad;
+  /*color: #dacfad;*/
 }
 .intro-title {
   font-family: open-sans-b, sans-serif;
@@ -426,9 +425,7 @@ a {
   padding-left: 15px;
   float: left;
 }
-.page {
-  margin-top: 60px;
-}
+
 /*.page-wrapper {
   width: 1200px;
   margin: auto;
@@ -502,15 +499,25 @@ a {
 .news:not(:first-child) {
   margin-top: 60px;
 }
-.news-img,
-.new-img {
+.news-img {
   display: block;
+  width: 380px;
+  height: 294px;
 }
+.new-img {
+  width: 70px;
+  height: 70px;
+  margin: 2.5px 18px -2.5px -2px;
+  float: left;
+}
+
 .news-tag {
-  list-style: none;
+  list-style-type: none;
   padding: 0;
   margin-bottom: 15px;
   display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
 }
 
 .news-tag-item {
@@ -569,6 +576,7 @@ a {
 
 .news-text {
   margin-left: 30px;
+  width: 367px;
 }
 
 .news,
@@ -591,9 +599,9 @@ a {
   flex-shrink: 0;
 }
 .aside-title {
-    font-size: 14px;
-    text-align: center;
-    text-transform: uppercase;
+  font-size: 14px;
+  text-align: center;
+  text-transform: uppercase;
 }
 
 .top {
@@ -647,7 +655,7 @@ a {
 }
 
 .search-group {
-    width: calc(100% - 47px);
+  width: calc(100% - 47px);
 }
 
 .hidden {
@@ -819,7 +827,7 @@ a {
 .shop-price-left {
   display: flex;
   /*font-weight: bold;*/
-  font-family: open-sans-b,sans-serif;
+  font-family: open-sans-b, sans-serif;
   justify-content: flex-end;
   align-items: stretch;
   flex-direction: column;
@@ -921,7 +929,6 @@ a {
   margin: 0 auto;
 }
 
-
 footer {
   margin-top: 35px;
 }
@@ -929,14 +936,12 @@ footer {
   text-align: center;
   margin-top: 70px;
   margin-bottom: 40px;
-
 }
 .copyright-link {
   font-size: 12px;
-  font-family: open-sars-bs,sans-serif;
+  font-family: open-sars-bs, sans-serif;
   color: #999;
 }
-
 
 @media (min-width: 768px) and (max-width: 1199px) {
   .header {
@@ -1046,7 +1051,6 @@ footer {
     width: 100%;
   }
 
-
   .news-text {
     display: flex;
     flex-direction: column;
@@ -1084,7 +1088,6 @@ footer {
     gap: 75px;
     flex-wrap: wrap;
     margin-left: 35px;
-    gap: 85px;
   }
 
   .footer-wrapper {
@@ -1200,14 +1203,10 @@ footer {
     margin: 0;
   }
 
-
-
   .news-description {
     display: flex;
     flex-direction: column;
   }
-
-  .news-text {}
 
   .news-name {
     margin-bottom: 30px;
@@ -1216,7 +1215,6 @@ footer {
   .aside {
     margin-top: 15px;
     width: 100%;
-
   }
 
   .aside-item {
