--- a/css/style.css
+++ b/css/style.css
@@ -326,11 +326,8 @@ a {
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  padding-bottom: 35px;
-  padding-left: 35px;
-  margin-left: 20px;
-  margin-right: 20px;
-  margin-bottom: 15px;
+  padding: 30px 31px 24px 33px;
+  margin: 0px 20px 17px 17px;
 }
 
 .now-trend-card {
