--- a/css/style.css
+++ b/css/style.css
@@ -93,7 +93,7 @@ a {
   margin: auto;
   position: relative;
   background-color: #fff;
-  padding: 48px 25px 55px 25px;
+  padding: 48px 25px 0px 25px;
   line-height: 1.6;
 }
 
@@ -103,6 +103,13 @@ a {
 
 .p-feedback-select,
 .p-feedback-field-opinion {
+  box-sizing: border-box;
+  display: block;
+  width: 100%;
+  height: 133px;
+  max-width: 390px;
+  overflow: auto;
+  resize: none;
   border: none;
   background-color: #f4f7f6;
   padding-left: 20px;
@@ -179,13 +186,15 @@ a {
   display: block;
 }
 
-.p-feedback-field-opinion {
+/*.p-feedback-field-opinion {
+  display: flex;
   overflow: auto;
   resize: none;
   width: 100%;
+  max-width: 390px;
   height: 133px;
   font-family: open-sans-r;
-}
+}*/
 
 .p-feedback-button {
   margin-top: 25px;
@@ -498,8 +507,10 @@ a {
 }
 .news-img {
   display: block;
-  width: 380px;
-  height: 294px;
+  width: 100%;
+  min-width: 380px;
+  height: 100%;
+  min-height: 294px;
 }
 .new-img {
   width: 70px;
@@ -594,6 +605,7 @@ a {
 .aside {
   width: 270px;
   flex-shrink: 0;
+  margin-left: 80px;
 }
 .aside-title {
   font-size: 14px;
@@ -632,10 +644,6 @@ a {
   text-decoration: none;
   color: #000;
   opacity: 0.54;
-}
-
-.new-text {
-  margin-left: 20px;
 }
 
 .new {
@@ -801,18 +809,23 @@ a {
 .shop-desc-title {
   /*font-weight: bold;*/
   font-family: open-sans-b, sans-serif;
-  font-size: 1.25rem;
+  font-size: 1.35rem;
   padding-bottom: 5px;
   line-height: 24px;
   text-transform: uppercase;
+  margin-bottom: 5px;
 }
 
 .shop-title-info {
+  font-family: open-sans-b, sans-serif;
   padding-bottom: 10px;
   line-height: 22px;
 }
 
 .shop-desc-info {
+  /*font-family: open-sans-b, sans-serif;*/
+  font-size: 1.1rem;
+  margin-top: 0px;
   margin-bottom: 25px;
 }
 
@@ -835,7 +848,7 @@ a {
   font-size: 0.88rem;
 }
 
-.shop-price-right button {
+.shop-price-right-button {
   height: 50px;
   border: none;
   background-color: #b59f5b;
@@ -856,11 +869,11 @@ a {
   text-decoration: underline;
 }
 
-.shop-price-right button:hover {
+.shop-price-right-button:hover {
   background-color: #000;
 }
 
-.shop-price-right a {
+.shop-price-right-button a {
   color: #fff;
 }
 
@@ -1033,6 +1046,10 @@ footer {
     margin-right: 35px;
   }
 
+  .aside {
+    margin-left: 0px;
+  }
+
   .new {
     display: flex;
     flex-direction: row;
@@ -1112,7 +1129,8 @@ footer {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    max-width: 767px;
+    max-width: 100%;
+    overflow: hidden;
   }
 
   .header-top {
@@ -1196,6 +1214,10 @@ footer {
     flex-direction: column;
   }
 
+  .new-text {
+    margin-left: 0px;
+  }
+
   .news-teg {
     margin: 0;
   }
@@ -1211,6 +1233,7 @@ footer {
 
   .aside {
     margin-top: 15px;
+    margin-left: 0px;
     width: 100%;
   }
 
