--- a/css/style.css
+++ b/css/style.css
@@ -508,7 +508,8 @@ a {
 .news-img {
   display: block;
   width: 100%;
-  min-width: 380px;
+  /*min-width: 380px;*/
+  max-width: 382px;
   height: 100%;
   min-height: 294px;
 }
@@ -824,7 +825,7 @@ a {
 
 .shop-desc-info {
   /*font-family: open-sans-b, sans-serif;*/
-  font-size: 1.1rem;
+  font-size: 15px;
   margin-top: 0px;
   margin-bottom: 25px;
 }
@@ -886,7 +887,7 @@ a {
 
 /*Social*/
 .social-network {
-  background-color: #eee;
+  background-color: #f4f7f6;
   height: 84px;
   width: 100%;
 }
